Fix email alignment

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -116,6 +116,10 @@
           font-size: initial;
           align-items: center;
         }
+
+        .email {
+          margin-top: 1%;
+        }
       }
     }
     
